--- a/style.css
+++ b/style.css
@@ -1,9 +1,72 @@
 :root {
     font-family: Arial, Helvetica, sans-serif;
     overflow-x: hidden;
+    --shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+    --btncolor: #d9f99d;
 }
 
 * {
     padding: 0;
     margin: 0;
 }
+
+nav {
+    width: 100vw;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+    gap: 30px;
+    box-shadow: var(--shadow);
+}
+
+.nav {
+    display: flex;
+    gap: 10px;
+}
+
+.nav button {
+    height: 35px;
+    width: 100px;
+    cursor: pointer;
+    background-color: var(--btncolor);
+    color: black;
+    border: none;
+    font-weight: 600;
+    border-radius: 10px;
+    border: 1px solid black;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+
+.contentHome {
+    display: flex;
+    margin: 0 100px;
+    padding: 20px;
+    gap: 20px;
+    border: 1px solid black;
+}
+
+/*Menu*/
+
+.dish {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 20px 100px;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+}
+
+.logo {
+    cursor: pointer;
+}
+
+
